[package]
name = "glyph"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["signal"] }
tracing-subscriber = "0.3.18"
log = "0.4.22"
serde_json = "1.0.132"
chrono = "0.4.38"
mongodb = "3.1.0"
lazy_static = "1.5.0"
thiserror = "2.0.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
poise = "0.6.1"
base64 = "0.22.1"
vss = "0.1.0"
tokio-util = "0.7.12"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
